--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
         <table cellspacing="20">
             <tr>
                 <td> <img src="images\image resize-modified.png" alt="My Profile Picture"></td>
-                <td><h1>JAYA PRAGNA</h1>
+                <td><h1>PRAGNA</h1>
                     <p><em>Enthusiastic</em> and <strong>Courage</strong></p>
-                    <p>I'm from <strong>Machilipatnam.</strong></p>
-                    <p>I'm an <u>Undergraduate Student</u> .</p></td>
+                    <p>I'm from <strong>India</strong></p>
+                    <p>I'm a <u>Student</u> .</p></td>
             </tr>
         </table>
        
         <hr>
         <h3>Educational Qualification</h3>
         <ul>
-            <li>Completed ssc in 2017 and secured 10 CGPA.</li>
-            <li>Completed Highschool in 2019 and secured 9.79 CGPA.</li>
-            <li>Pursuing Btech 4th year and secured 8.84 CGPA till now.</li>
+            <li>Completed ssc in xxxx and secured 10 CGPA.</li>
+            <li>Completed Highschool in xxxx and secured 10 CGPA.</li>
+            <li>Graduated and secured 10 CGPA.</li>
         </ul>
         <hr>
         <h3>Hobbies</h3>
@@ -55,15 +55,11 @@
                     <table cellspacing="10">
                         <tr>
                             <td>Drawing</td>
-                            <td>★★</td>
+                            <td>★★★</td>
                         </tr>
                         <tr>
                             <td>Photography</td>
                             <td>★★</td>
-                        </tr>
-                        <tr>
-                            <td>Communication Skills </td>
-                            <td>★★★★</td>
                         </tr>
                     </table>
             </tr>  
