--- a/mycontact.html
+++ b/mycontact.html
@@ -7,13 +7,12 @@
 <body>
     <h3>My Contacts</h3>
     <ul>
-        <li>Phone NUmber:-9390617965</li>
-        <li>Email:-jayapragna7@gmail.com</li>
-        <li>linkedinprofile:- Vikkurthi Jaya Pragna</li>
-        <li>Instagram acc:- pragna_791</li>
+        <li>Phone NUmber:1486451646551</li>
+        <li>Email:-you@gmail.com</li>
+        <li>Address:xxxxxxxx</li>
     </ul>
     <hr>
-    <form action="mailto:jayapragna7@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:yourmail@gmail.com" method="post" enctype="text/plain">
         <label>Name:</label>
         <input type="text" name="Name"><br>
         <label>Email:</label>
