--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td> <img src="images\image resize-modified.png" alt="My Profile Picture"></td>
+                <td> <img src="download.png" alt="My Profile Picture"></td>
                 <td><h1>PRAGNA</h1>
                     <p><em>Enthusiastic</em> and <strong>Courage</strong></p>
                     <p>I'm from <strong>India</strong></p>
