--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td> <img src="download.png" alt="My Profile Picture"></td>
+                <td> <img src="gitimages/download.png" alt="My Profile Picture"></td>
                 <td><h1>PRAGNA</h1>
                     <p><em>Enthusiastic</em> and <strong>Courage</strong></p>
                     <p>I'm from <strong>India</strong></p>
@@ -25,9 +25,10 @@
         <hr>
         <h3>Hobbies</h3>
         <ol>
-            <li><a href="https://www.horusmusic.global/surprising-benefits-making-music-hobby/"> Listening to Music</a></li>
-            <li><a href="https://www.wizardingworld.com/discover/books">Books</a></li>
-            <li><a href="https://www.shortparagraph.com/passion/short-paragraph-on-my-hobby-dancing/1685">loves to dance</a></li>
+            <li><a href="gitimages/music.png"> Listening to Music</a></li>
+            <li><a href="gitimages/novels.png">Books</a></li>
+            <li><a href="gitimages/dance.png">dancing</a></li>
+            <li><a href="gitimages/painting.png">Painting</a></li>
         </ol>
         <hr>
         <h3><a href="mycontact.html">Contact Me</a></h3>
